[gd_scene load_steps=4 format=3 uid="uid://tie5t0tmg5ws"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_42gd8"]
[ext_resource type="Script" path="res://ChatBox.gd" id="2_ffpws"]
[ext_resource type="Texture2D" uid="uid://sf02s5jyobbc" path="res://biglogo.png" id="3_focdo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_42gd8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -456.0
offset_top = -579.0
offset_right = 7277.0
offset_bottom = 7756.0
color = Color(0, 0.0901961, 0, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
offset_right = 1125.0
offset_bottom = 625.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25

[node name="ChatBox" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 19
script = ExtResource("2_ffpws")
temperature = 1.06462
tau = 0.703

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/ChatBox"]
layout_mode = 2

[node name="Biglogo" type="TextureRect" parent="MarginContainer2/ChatBox/HBoxContainer"]
modulate = Color(0.604713, 0.873402, 3.85046e-07, 1)
layout_mode = 2
texture = ExtResource("3_focdo")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/ChatBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/ChatBox/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer2/ChatBox/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.466529, 0.686366, 0, 1)
text = "Spanish To English
"

[node name="Button2" type="Button" parent="MarginContainer2/ChatBox/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.713479, 0.437016, 0, 1)
text = "EXIT"

[node name="ChatLogContainer" type="ScrollContainer" parent="MarginContainer2/ChatBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/ChatBox/ChatLogContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25

[node name="ChatLog" type="VBoxContainer" parent="MarginContainer2/ChatBox/ChatLogContainer/MarginContainer"]
modulate = Color(0, 0.862745, 0.470588, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/ChatBox"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="InputFields" type="HBoxContainer" parent="MarginContainer2/ChatBox/MarginContainer"]
custom_minimum_size = Vector2(0, 84.75)
layout_mode = 2

[node name="Input" type="TextEdit" parent="MarginContainer2/ChatBox/MarginContainer/InputFields"]
modulate = Color(0.141176, 1, 0.356863, 1)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Input Field"

[connection signal="button_down" from="MarginContainer2/ChatBox/HBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_button_2_button_down"]
